--- a/styles/pages/masterplan.module.scss
+++ b/styles/pages/masterplan.module.scss
@@ -50,6 +50,7 @@
     color: $white;
     font-weight: 700;
     font-size: 1.3rem;
+    margin-bottom: 0;
   }
   &.active {
     background: $white;
