--- a/styles/components/modifyplan/currentplan.module.scss
+++ b/styles/components/modifyplan/currentplan.module.scss
@@ -70,6 +70,7 @@
   h4 {
     font-weight: 700;
     width: 5rem;
+    font-size: 1rem;
   }
   button {
     border: 5px solid $blueGrey;
@@ -103,12 +104,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  h4,
-  h5 {
+  h4 {
     color: $white!important;
+    font-size: 1rem;
     font-weight: 700;
   }
   h5 {
+    color: $white!important;
+    font-weight: 700;
     margin-top: 5px;
     font-size: 0.6rem;
   }
