--- a/styles/components/modifyplan/availableplans.module.scss
+++ b/styles/components/modifyplan/availableplans.module.scss
@@ -1,102 +1,111 @@
 @import "~sass-variables";
 
 .headerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 1rem 0;
-  h2 {
-    color: $purple;
-    font-weight: 800;
-    font-size: 1.6rem;
-  }
-  .searchButton {
-    color: $purple;
-    font-weight: 700;
-    font-size: 0.9rem;
-    border: 5px solid $purple;
-    background: transparent;
-    border-radius: 15px;
-    padding: 7px 2.7rem;
-    cursor: pointer;
-    text-align: center;
-  }
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 1rem 0;
+
+    h2 {
+        color: $purple;
+        font-weight: 800;
+        font-size: 1.6rem;
+    }
+
+    .searchButton {
+        color: $purple;
+        font-weight: 700;
+        font-size: 0.9rem;
+        border: 5px solid $purple;
+        background: transparent;
+        border-radius: 15px;
+        padding: 4px 1rem;
+        width: 250px;
+        text-align: center;
+    }
 }
 
 .plansContainer {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .planContainer {
-  width: calc(50% - 0.5rem);
-  background: $blue;
-  border-radius: 30px;
-  display: flex;
-  gap: 2rem;
-  padding: 1.5rem;
-  border-radius: 30px;
-  position: relative;
-  .plantHoverText{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+    width: calc(50% - 0.5rem);
+    background: $blue;
+    border-radius: 30px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
-    background: rgba($yellow,0.7);
-    button{
-      color: $white;
-      font-weight: 700;
-      font-size: 1.5rem;
-      border: 5px solid $blue;
-      background: $blue;
-      border-radius: 15px;
-      padding: 0px 3rem;
-      min-width: 200px;
-      cursor: pointer;
-      margin: 0 10px;
-      &:hover{
-        background: $purple;
-        border-color: $purple;
-      }
+    gap: 2rem;
+    padding: 1.5rem;
+    border-radius: 30px;
+    position: relative;
+
+    .plantHoverText {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 10;
+        background: rgba($yellow, 0.7);
+
+        button {
+            color: $white;
+            font-weight: 700;
+            font-size: 1.5rem;
+            border: 5px solid $blue;
+            background: $blue;
+            border-radius: 15px;
+            padding: 0px 3rem;
+            min-width: 200px;
+            cursor: pointer;
+            margin: 0 10px;
+
+            &:hover {
+                background: $purple;
+                border-color: $purple;
+            }
+        }
     }
-  }
 }
 
 .planImage {
-  background: $white;
-  border-radius: 30px;
-  flex: 1;
-  height: 100%;
+    background: $white;
+    border-radius: 30px;
+    flex: 1;
+    height: 100%;
 }
 
 .planInfoContainer {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 1rem 0;
-  h3,
-  h4,
-  h5 {
-    color: $white;
-  }
-  h3 {
-    font-weight: 700;
-    font-size: 1.3rem;
-  }
-  h4 {
-    font-size: 0.75rem;
-    font-weight: 700;
-    margin: 6px 0;
-  }
-  h5 {
-    font-size: 0.75rem;
-  }
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1rem 0;
+
+    h3,
+    h4,
+    h5 {
+        color: $white;
+    }
+
+    h3 {
+        font-weight: 700;
+        font-size: 1.3rem;
+    }
+
+    h4 {
+        font-size: 0.75rem;
+        font-weight: 700;
+        margin: 6px 0;
+    }
+
+    h5 {
+        font-size: 0.75rem;
+    }
 }
