--- a/styles/pages/masterplan.module.scss
+++ b/styles/pages/masterplan.module.scss
@@ -6,7 +6,6 @@
   background: $yellow;
   width: 100%;
   position: relative;
-  height: 100vh;
 }
 
 .container {
@@ -14,7 +13,6 @@
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
-  height: 100%;
 }
 
 .header {
@@ -62,11 +60,10 @@
 
 .contentContainer {
   background: $white;
-  flex: 1;
   width: 100%;
   border-top-right-radius: 38px;
   border-bottom-right-radius: 38px;
   border-bottom-left-radius: 38px;
   display: flex;
-  min-height: 0;
+  flex: 1 1;
 }
