--- a/styles/pages/register/account.module.scss
+++ b/styles/pages/register/account.module.scss
@@ -91,7 +91,8 @@
   h5 {
     color: $white;
     font-weight: 600;
-    font-size: 1.3rem;
+    font-size: 1.1rem!important;
+    text-transform: uppercase;
   }
 }
 
