--- a/styles/components/masterplan/list.module.scss
+++ b/styles/components/masterplan/list.module.scss
@@ -80,6 +80,9 @@
 
 .taskCap {
     width: 2.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &.overdue {
         background: $red;
@@ -91,6 +94,15 @@
 
     &.tomorrow {
         background: $grey;
+    }
+
+    .check{
+        color: $white;
+        width: 24px;
+        height: 24px;
+        border: 2px solid $white;
+        border-radius: 50%;
+        padding: 0 0 0 3px;
     }
 }
 
