--- a/styles/pages/profile.module.scss
+++ b/styles/pages/profile.module.scss
@@ -195,6 +195,7 @@
                         color: $white;
                         font-weight: 700;
                         margin-top: 0.5rem;
+                        font-size: 1rem;
                     }
                 }
             }
