--- a/styles/components/plantsettings/userSettings.module.scss
+++ b/styles/components/plantsettings/userSettings.module.scss
@@ -42,6 +42,7 @@
                 height: 80px;
                 background-color: $white;
                 border-radius: 12px;
+                padding: 12px;
             }
         }
 
