--- a/styles/components/modifyplan/availableplans.module.scss
+++ b/styles/components/modifyplan/availableplans.module.scss
@@ -20,7 +20,7 @@
         background: transparent;
         border-radius: 15px;
         padding: 4px 1rem;
-        width: 250px;
+        max-width: 50%;
         text-align: center;
     }
 }
@@ -79,6 +79,12 @@
     border-radius: 30px;
     flex: 1;
     height: 100%;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    img{
+        max-width: 100%;
+    }
 }
 
 .planInfoContainer {
@@ -107,5 +113,20 @@
 
     h5 {
         font-size: 0.75rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .planContainer {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .planContainer {
+        display: block;
+    }
+    .planImage{
+        height: 150px;
     }
 }
