--- a/styles/components/masterplan/byplantdetail.module.scss
+++ b/styles/components/masterplan/byplantdetail.module.scss
@@ -39,6 +39,13 @@
             background: $white;
             border-radius: 30px;
             flex: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            img{
+                max-width: 100%;
+            }
         }
 
         .detailInfo {
@@ -96,7 +103,7 @@
             }
         }
 
-        button{
+        .add{
             color: $white;
             font-size: 0.8rem;
             border: none;
@@ -228,4 +235,15 @@
             background: $purple;
         }
     }
+}
+
+@media screen and (max-width: 576px) {
+    .plantInfoContainer {
+        display: block;
+        padding: 2rem 0;
+        .detailContainer,
+        .taskContainer {
+            width: 100%;
+        }
+    }    
 }
