--- a/styles/components/plantsettings/plants.module.scss
+++ b/styles/components/plantsettings/plants.module.scss
@@ -37,7 +37,7 @@
         background: transparent;
         border-radius: 50px;
         padding: 4px 1rem;
-        width: 250px;
+        max-width: 50%;
         text-align: center;
     }
 }
@@ -95,6 +95,12 @@
     border-radius: 30px;
     flex: 1;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    img{
+        max-width: 100%;
+    }
 }
 
 .plantInfoContainer {
@@ -102,7 +108,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    // margin: 1rem 0;
     margin: 0;
 
     h3,
@@ -146,6 +151,16 @@
     border-radius: 30px;
     flex: 1;
     height: 180px;
+    text-align: center;
+    display: flex;    
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    img{
+        max-height: 180px;
+        max-width: 100%;
+        margin: auto;
+    }
 }
 
 .inputContainer {
@@ -197,4 +212,42 @@
     color: $red;
     font-weight: bold;
     margin-bottom: 0;
+}
+
+@media screen and (max-width: 1024px) {
+    .plantsContainer {
+        display: grid;
+        .plantContainer{
+            width: 100%;
+            display: block;
+        }
+    }
+    .plantImage{
+        height: 150px;
+        margin-bottom: 1rem;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .headerContainer{
+        display: block;
+        text-align: center;
+        .addCustomContainer {
+            justify-content: center;
+        }
+        .searchButton {
+            margin-top: 1rem;
+            max-width: 100%;
+        }
+    }
+    .plantContainer {
+        .plantHoverText {
+            flex-direction: column;
+            button {
+                margin: 0.5rem 0;
+                font-size: 1rem;
+                background: $blue;
+            }
+        }
+    }
 }
