--- a/styles/pages/modifyplan.module.scss
+++ b/styles/pages/modifyplan.module.scss
@@ -8,9 +8,14 @@
     position: relative;
 }
 
+.modifyContent{
+    display: flex;
+    width: calc(100% - 14rem);
+}
+
 .container {
     flex: 1;
-    padding: 1.5rem;
+    padding: 1.5rem;    
 }
 
 .header {
@@ -24,4 +29,28 @@
     font-size: 2.3rem;
     margin-top: 0.8rem;
     color: $purple;
+}
+
+@media screen and (max-width: 768px) {
+    .modifyContent {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .container {
+        width: 100%;
+    }
+    .header{
+        font-size: 1.2rem;
+    }
+    .subHeader{
+        font-size: 1.8rem;
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
+    .modifyContent {
+        display: block;
+        width: calc(100% - 80px);
+    }
 }
