--- a/styles/pages/plantsettings.module.scss
+++ b/styles/pages/plantsettings.module.scss
@@ -25,3 +25,14 @@
     margin-top: 0.8rem;
     color: $purple;
 }
+
+@media screen and (max-width: 576px) {
+    .header{
+        font-size: 1.2rem;
+    }
+    .subHeader{
+        font-size: 1.8rem;
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
+}
