--- a/styles/pages/account/register.module.scss
+++ b/styles/pages/account/register.module.scss
@@ -69,6 +69,7 @@
     justify-content: space-between;
     align-items: center;
     gap: 1;
+    position: relative;
 
     .detailsInputsContainer {
         flex: 1;
@@ -94,10 +95,7 @@
 
 .detailsLocationContainer {
     width: 50%;
-    background: $white;
-    display: flex;
-    border-radius: 20px;
-    margin: 1rem 0 1rem 1rem;
+    margin: 1rem 0 1rem 1rem;    
 }
 
 .nextButtonContainer {
