--- a/styles/components/masterplan/byplant.module.scss
+++ b/styles/components/masterplan/byplant.module.scss
@@ -56,6 +56,7 @@
             height: 100%;
             img{
                 max-width: 100%;
+                max-height: 100%;
             }
         }
 
