--- a/styles/components/plantsettings/userSettings.module.scss
+++ b/styles/components/plantsettings/userSettings.module.scss
@@ -37,12 +37,19 @@
                 }
             }
 
-            .map{
+            .mapContainer{
                 width: 100%;
-                height: 200px;
+                height: 150px;
                 background-color: $white;
                 border-radius: 12px;
                 padding: 12px;
+                position: relative;
+
+                .map{
+                    width: 100% !important;
+                    top: 0;
+                    right: 0;
+                }
             }
         }
 
