--- a/styles/pages/profile.module.scss
+++ b/styles/pages/profile.module.scss
@@ -54,6 +54,10 @@
                 border-radius: 50%;
                 margin: 1rem auto;
                 background-color: $white;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                
                 img{
                     max-height: 200px;
                     max-width: 100%;
