--- a/styles/components/masterplan/calendardetail.module.scss
+++ b/styles/components/masterplan/calendardetail.module.scss
@@ -43,6 +43,7 @@
         justify-content: center;
         img{
             max-width: 100%;
+            max-height: 100%;
         }
     }
     
@@ -130,6 +131,8 @@
         display: block;
         .noteImage {
             height: 150px;
+            margin-bottom: 1rem;
+
         }
     }
 }
