--- a/styles/components/masterplan/byplantdetail.module.scss
+++ b/styles/components/masterplan/byplantdetail.module.scss
@@ -45,6 +45,11 @@
 
             img{
                 max-width: 100%;
+                max-height: 100%;
+                border-radius: 30px;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
 
