--- a/styles/components/modifyplan/currentplan.module.scss
+++ b/styles/components/modifyplan/currentplan.module.scss
@@ -32,6 +32,10 @@
     img{
         max-width: 100%;
         max-height: 100%;
+        border-radius: 30px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
