--- a/styles/components/plantsettings/plants.module.scss
+++ b/styles/components/plantsettings/plants.module.scss
@@ -100,7 +100,11 @@
     justify-content: center;
     img{
         max-width: 100%;
-        max-height: 100%;
+        max-height: 200px;
+        border-radius: 30px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
@@ -150,22 +154,29 @@
 .modalImage {
     background: $white;
     border-radius: 30px;
-    flex: 1;
     height: 180px;
+    flex: 1 1;
     text-align: center;
     display: flex;    
     align-items: center;
     justify-content: center;
-    padding: 10px;
     img{
-        max-height: 180px;
+        max-height: 100%;
         max-width: 100%;
-        margin: auto;
+        border-radius: 30px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.plantsContainer{
+    .inputContainer {
+        flex: 2 1;
     }
 }
 
 .inputContainer {
-
     input,
     textarea {
         border: none;
