--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -95,6 +95,10 @@ h6 {
     z-index: 100!important;
 }
 
+.react-datepicker__navigation-icon{
+    top: 5px!important;
+}
+
 .settingMapContainer{
     .map{
         left: 0;
