update task overdue

--- a/styles/components/masterplan/calendardetail.module.scss
+++ b/styles/components/masterplan/calendardetail.module.scss
@@ -76,6 +76,7 @@
         font-weight: 800;
     }
     .detailContainer{
+        padding: 0 1rem;
         h5{
             font-size: 0.8rem;
             font-weight: 700;
