--- a/styles/pages/profile.module.scss
+++ b/styles/pages/profile.module.scss
@@ -64,6 +64,10 @@
                     border-radius: 50%;
                     display: block;
                     margin: auto;
+                    width: 100%;
+                    height: 100%;
+                    padding: 0.5rem;
+                    object-fit: cover;
                 }
             }
 
