--- a/styles/pages/profile.module.scss
+++ b/styles/pages/profile.module.scss
@@ -57,6 +57,7 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                position: relative;
                 
                 img{
                     max-height: 200px;
