--- a/styles/components/masterplan/byplant.module.scss
+++ b/styles/components/masterplan/byplant.module.scss
@@ -56,8 +56,8 @@
             height: 100%;
             img{
                 max-width: 100%;
-                max-height: 100%;
-                border-radius: 30px;
+                max-height: 200px;
+                border-radius: 28px;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
