--- a/styles/components/masterplan/byplantdetail.module.scss
+++ b/styles/components/masterplan/byplantdetail.module.scss
@@ -45,8 +45,8 @@
 
             img{
                 max-width: 100%;
-                max-height: 100%;
-                border-radius: 30px;
+                max-height: 250px;
+                border-radius: 28px;
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
