--- a/styles/components/masterplan/calendardetail.module.scss
+++ b/styles/components/masterplan/calendardetail.module.scss
@@ -43,8 +43,8 @@
         justify-content: center;
         img{
             max-width: 100%;
-            max-height: 100%;
-            border-radius: 30px;
+            max-height: 200px;
+            border-radius: 28px;
             width: 100%;
             height: 100%;
             object-fit: cover;
@@ -72,7 +72,7 @@
     padding-top: 1rem;
     text-align: center;
     h3{
-        font-size: 2rem;
+        font-size: 1.7rem;
         font-weight: 800;
     }
     .detailContainer{
@@ -116,7 +116,7 @@
         margin: 0 auto;
         cursor: pointer;
 
-        &:hover {
+        &:hover, &.active {
             background: $purple;
         }
     }
