--- a/styles/components/modifyplan/currentplan.module.scss
+++ b/styles/components/modifyplan/currentplan.module.scss
@@ -31,7 +31,7 @@
     justify-content: center;
     img{
         max-width: 100%;
-        max-height: 100%;
+        max-height: 200px;
         border-radius: 30px;
         width: 100%;
         height: 100%;
