--- a/styles/pages/account/register.module.scss
+++ b/styles/pages/account/register.module.scss
@@ -68,7 +68,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 1;
+    gap: 1rem;
     position: relative;
 
     .detailsInputsContainer {
@@ -86,9 +86,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: $white;
+    position: relative;
     img{
         max-height: 8rem;
         max-width: 100%;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
         border-radius: 50%;
     }
 }
