--- a/styles/pages/dashboard.module.scss
+++ b/styles/pages/dashboard.module.scss
@@ -154,7 +154,7 @@
     .bloomsContainer {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 30px;
+        gap: 20px;
 
         .bloomContainer {
             position: relative;
@@ -187,8 +187,9 @@
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
-                padding: 1.5rem 0.5rem;
+                padding: 1rem 0.5rem;
                 width: 100%;
+                height: 100%;
 
                 h4 {
                     margin-bottom: 0;
@@ -199,8 +200,7 @@
                 h5 {
                     color: $white;
                     margin-bottom: 1rem;
-                    font-size: 1rem;
-                    text-transform: uppercase;
+                    font-size: 0.8rem;
                 }
 
                 .bloomButton {
@@ -308,7 +308,7 @@
     gap: 1rem;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1280px) {
     .dashboardRow {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -345,10 +345,14 @@
     }
     .dashboardRow {
         grid-template-columns: 1fr;
+        border-radius: 20px;
     }
     .greetingContainer {
         padding: 1rem;
-        border-radius: 30px;
+        border-radius: 20px;
+    }
+    .weatherContainer, .statContainer{
+        border-radius: 20px;
     }
     .header{
         font-size: 1.2rem;
