--- a/styles/pages/account/payment.module.scss
+++ b/styles/pages/account/payment.module.scss
@@ -55,6 +55,7 @@
     h1 {
         font-size: 110px;
         text-transform: uppercase;
+        margin-bottom: 0;
     }
 }
 
@@ -102,6 +103,7 @@
         text-transform: uppercase;
         font-weight: 600;
         font-size: 36px;
+        margin-bottom: 0;
     }
 }
 
