--- a/styles/pages/account/success.module.scss
+++ b/styles/pages/account/success.module.scss
@@ -44,6 +44,7 @@
             color: $white;
             font-weight: 600;
             font-size: 1.3rem;
+            margin-bottom: 0;
         }
     }
 }
